--- a/package.json
+++ b/package.json
@@ -44,10 +44,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
-    "@tanstack/react-query": "^5.67.2",
-    "@types/express-rate-limit": "^5.1.3",
-    "@types/jsonwebtoken": "^9.0.9",
-    "@types/node-cron": "^3.0.11",
+    "@tanstack/react-query": "^5.60.5",
     "@types/nodemailer": "^6.4.17",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
@@ -62,7 +59,6 @@
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.3.0",
     "express": "^4.21.2",
-    "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
     "framer-motion": "^11.18.2",
     "input-otp": "^1.2.4",
@@ -71,7 +67,6 @@
     "memorystore": "^1.6.7",
     "mongodb": "^6.14.2",
     "mongoose": "^8.11.0",
-    "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
@@ -88,16 +83,14 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.0",
     "wouter": "^3.3.5",
-    "ws": "^8.18.1",
+    "ws": "^8.18.0",
     "zod": "^3.23.8",
-    "zod-validation-error": "^3.4.0",
-    "zustand": "^5.0.3"
+    "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
     "@replit/vite-plugin-cartographer": "^0.0.2",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
-    "@types/bcryptjs": "^2.4.6",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
@@ -106,7 +99,7 @@
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
-    "@types/ws": "^8.18.0",
+    "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.30.4",
