--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,10 @@ NODE_ENV=development
 SESSION_SECRET=change-this-to-a-secure-random-value
 JWT_SECRET=change-this-to-a-secure-random-value
 
+# Google OAuth Configuration
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+GOOGLE_CALLBACK_BASE_URL=http://localhost:3000
+
 # API Keys
 # Add any API keys your application uses here
