--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
+    "@types/passport-google-oauth20": "^2.0.16",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -75,6 +76,7 @@
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -99,6 +101,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/bcryptjs": "^2.4.6",
     "@types/connect-pg-simple": "^7.0.3",
+    "@types/cookie": "^0.6.0",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.1",
     "@types/lodash": "^4.17.16",
