--- a/.env.development
+++ b/.env.development
@@ -11,3 +11,8 @@ NODE_ENV=development
 # Authentication
 SESSION_SECRET=dev-session-secret-replace-in-production
 JWT_SECRET=dev-jwt-secret-replace-in-production
+
+# Google OAuth Configuration
+GOOGLE_CLIENT_ID=647504844455-g9por1rrmp350dea7qq34bfhha78snu2.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_CALLBACK_BASE_URL=https://claimsutra.com
